# cs240h-class

./: LICENSE  Lab1.hs  README.txt  cs240h-class.cabal
Lab1/: Lab1.hs
Lab2/: Config.hs  Debug.hs  DrawHilbertCurve.hs  DrawRects.hs  DrawSomeRects.hs  HilbertCoord.hs  HilbertCurve.hs  HilbertRTree.hs  Lab2.hs  LoadRects.hs  Misc.hs  Node.hs  Rect.hs  RunTests.hs  SlowHilbertCurve.hs  Utils.hs  WikipediaHilbertCurve.hs  ZNode.hs
Lab2/csrc/: wikipediaHilbertCurve.c  wikipediaHilbertCurve.h
