Name:                cs240h-class
Version:             0.1
Synopsis:            Labs for Stanford CS240H, Fall 2011
License:             BSD3
License-file:        LICENSE
Author:              Greg Horn
Maintainer:          ghorn@stanford.edu
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2


Extra-source-files: Lab2/csrc

Executable lab1
  Main-is:           Lab1/Lab1.hs
  Build-depends:     base, text, containers

Executable lab2
  Main-is:           Lab2/Lab2.hs
  Build-depends:     gloss

Executable drawHilbertCurve
  Main-is:           Lab2/DrawHilbertCurve.hs
  Build-depends:     gloss

Executable runTests
  Main-is:           Lab2/RunTests.hs
  Ghc-options:       -O2
  Build-depends:     QuickCheck, random

  C-sources:         Lab2/csrc/wikipediaHilbertCurve.c
  Include-dirs:      Lab2/csrc
  Includes:          wikipediaHilbertCurve.h
  Install-includes:  wikipediaHilbertCurve.h
  Cc-options:        -Wall -Werror
